feat(getResourceEvaluation): add controller, route and spec for getResourceEvaluation endpoint
